--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -195,6 +195,12 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    implementation project(':react-native-firebase')
+
+    // Firebase dependencies
+    implementation "com.google.android.gms:play-services-base:16.1.0"
+    implementation "com.google.firebase:firebase-core:16.0.9"
 }
 
 // Run this once to be able to run the application with BUCK
