--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
+    "axios": "^0.19.2",
     "electron": "^7.1.11",
     "firebase": "^7.7.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-elements": "^1.2.7",
     "react-native-firebase": "^5.6.0",
-    "react-native-gesture-handler": "^1.5.3",
+    "react-native-gesture-handler": "^1.5.5",
     "react-native-reanimated": "^1.7.0",
     "react-native-responsive-dimensions": "^3.0.0",
     "react-native-safe-area-context": "^0.6.2",
@@ -25,7 +26,12 @@
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.0.15",
-    "react-redux": "^7.1.3"
+    "react-redux-firebase": "^3.1.0",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-promise-middleware": "^6.1.2",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
@@ -36,6 +42,7 @@
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.56.4",
     "react-native-dotenv": "^0.2.0",
+    "react-redux": "^7.1.3",
     "react-test-renderer": "16.9.0"
   },
   "jest": {
