--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "axios": "^0.19.2",
     "electron": "^7.1.11",
     "firebase": "^7.7.0",
+    "moment": "^2.24.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-calendar-picker": "^6.0.5",
     "react-native-elements": "^1.2.7",
     "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "^1.5.5",
@@ -23,6 +25,8 @@
     "react-native-responsive-dimensions": "^3.0.0",
     "react-native-safe-area-context": "^0.6.2",
     "react-native-screens": "^2.0.0-alpha.25",
+    "react-native-svg": "^12.0.2",
+    "react-native-svg-charts": "^5.3.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.0.15",
