--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "DOEProjectApp",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
+    "@react-native-community/toolbar-android": "0.1.0-rc.2",
     "axios": "^0.19.2",
     "electron": "^7.1.11",
     "firebase": "^7.7.0",
@@ -41,6 +42,7 @@
     "@babel/core": "^7.8.0",
     "@babel/runtime": "^7.8.0",
     "@react-native-community/eslint-config": "^0.0.6",
+    "@react-native-community/eslint-plugin": "^1.1.0",
     "babel-jest": "^24.9.0",
     "eslint": "^6.8.0",
     "jest": "^24.9.0",
