--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^3.0.3",
     "@react-native-community/masked-view": "^0.1.6",
     "@react-native-community/toolbar-android": "0.1.0-rc.2",
     "axios": "^0.19.2",
@@ -22,6 +23,7 @@
     "react-native-elements": "^1.2.7",
     "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "^1.5.5",
+    "react-native-modal-datetime-picker": "^9.0.0",
     "react-native-reanimated": "^1.7.0",
     "react-native-responsive-dimensions": "^3.0.0",
     "react-native-safe-area-context": "^0.6.2",
