--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -186,7 +186,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation "com.facebook.react:react-native:0.61.5"
 
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
